<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/app_background_dark"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/btn_login_kuaipan"
            android:layout_width="@dimen/cloud_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/pan_kuaipan"
            android:drawablePadding="10dp"
            android:paddingLeft="@dimen/cloud_button_margin_right"
            android:gravity="left|center_vertical"
            android:text="@string/cloud_kuaipan_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/kuaipan_login_btn"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btn_login_xiaomi"
            android:layout_below="@id/btn_login_kuaipan"
            android:layout_width="@dimen/cloud_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/pan_xiaomi"
            android:drawablePadding="10dp"
            android:paddingLeft="@dimen/cloud_button_margin_right"
            android:gravity="left|center_vertical"
            android:text="@string/cloud_xiaomi_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/xiaomi_login_btn"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btn_login_baidu"
            android:layout_below="@id/btn_login_xiaomi"
            android:layout_width="@dimen/cloud_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/pan_baidu"
            android:drawablePadding="10dp"
            android:paddingLeft="@dimen/cloud_button_margin_right"
            android:gravity="left|center_vertical"
            android:text="@string/cloud_baidu_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/baidu_login_btn"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btn_login_dropbox"
            android:layout_below="@id/btn_login_baidu"
            android:layout_width="@dimen/cloud_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/pan_dropbox"
            android:drawablePadding="10dp"
            android:paddingLeft="@dimen/cloud_button_margin_right"
            android:gravity="left|center_vertical"
            android:text="@string/cloud_dropbox_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/dropbox_login_btn"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btn_register_guide"
            android:layout_below="@id/btn_login_dropbox"
            android:layout_width="@dimen/cloud_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cloud_register_guide"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/kuaipan_skip_btn"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/cloud_need_other"
            android:layout_below="@id/btn_register_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/cloud_need_other_title"
            android:textColor="@drawable/kuaipan_skip_text"
            android:textSize="18sp" />
    </RelativeLayout>


</RelativeLayout>