<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/item_group_bg_pressed">

        <TextView
            android:id="@+id/tv_tab_activity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/label_import_txt"
            android:textColor="#5CACEE"
            android:textSize="18sp"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <TextView
            android:id="@+id/tv_tab_groups"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/label_export_txt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <TextView
            android:id="@+id/tv_tab_auto_kuaipan"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/label_auto_kuaipan"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="3dp">

        <ImageView
            android:id="@+id/iv_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:scaleType="matrix"
            android:src="#5CACEE" />
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/mViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
</LinearLayout>


