<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@color/uncheck_color"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/password_group_add"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/add_passwrdGroup_editview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/add_password_group_hint"
                android:inputType="text"
                android:maxLength="7"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/text_color"
                android:textSize="18sp" />
            <View
                android:id="@+id/add_password_line"
                android:layout_below="@id/add_passwrdGroup_editview"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/add_line"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/add_password_group_cancle_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selecter_item_function"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.7"
                    android:gravity="center_vertical"
                    android:text="@string/add_password_group_cancle"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/add_password_group_sure_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selecter_item_function"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.7"
                    android:gravity="center_vertical"
                    android:text="@string/add_password_group_sure"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp" />

</RelativeLayout>