<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/app_background_dark"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/kuaipan_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/logo_header"/>
    </LinearLayout>


    <View
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:layout_above="@id/middle"
        android:layout_marginBottom="-30dp"
        android:id="@+id/castle_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/castle"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/kuaipan_pain_spot_layout"
        android:layout_below="@id/middle"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/pain_spot"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_btn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_login_kuaipan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/login_kuaipan_btn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/kuaipan_login_btn"
            />

        <Button

            android:id="@+id/btn_login_ingore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/login_kuaipan_ingore"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/kuaipan_skip_btn"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/kuaipan_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/auto_kuaipan_content"
        android:textColor="#59935A"
        android:textSize="15sp"
        android:layout_above="@+id/bottom_btn_layout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>