<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/item_export_sdcard_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/password_export_btn_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/item_export_skydrive_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/password_export_btn_bg"
            android:clickable="true"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/item_export_sdcard_btn" >

            <TextView
                android:id="@+id/item_export_skydrive"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_weight="1.0"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="3dp"/>
            <TextView
                android:id="@+id/item_export_show_username"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:textColor="#DDDADFE5"
                android:textSize="16sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_weight="1.0"
                android:layout_gravity="center"/>

        </LinearLayout>


        <Button
            android:id="@+id/item_export_auto_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login_kuaipan_btn"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/kuaipan_login_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/item_export_skydrive_layout"
            android:enabled="false" />

        <CheckBox
            android:id="@+id/item_export_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/login_kuaipan_checkbox_txt"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_below="@+id/item_export_auto_btn"/>

        <TextView
            android:id="@+id/item_auto_prompt_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/auto_kuaipan_content"
            android:layout_below="@+id/item_export_checkbox"
            android:layout_margin="20dp" />

    </RelativeLayout>

</LinearLayout>